--- a/infra/postgres/deployment.yaml
+++ b/infra/postgres/deployment.yaml
@@ -1,16 +1,55 @@
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: postgres-pdb
+  namespace: postgres
+spec:
+  maxUnavailable: 0
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: postgres
+      app.kubernetes.io/component: primary
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: postgres
   namespace: postgres
   labels:
-    app: postgres
+    app.kubernetes.io/component: primary
 spec:
   selector:
-    app: postgres
+    app.kubernetes.io/component: primary
   ports:
     - name: db
       port: 5432
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-headless
+  namespace: postgres
+  labels:
+    app.kubernetes.io/component: primary
+  annotations:
+    # Use this annotation in addition to the actual publishNotReadyAddresses
+    # field below because the annotation will stop being respected soon but the
+    # field is broken in some versions of Kubernetes:
+    # https://github.com/kubernetes/kubernetes/issues/58662
+    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
+spec:
+  selector:
+    app.kubernetes.io/component: primary
+  type: ClusterIP
+  clusterIP: None
+  # We want all pods in the StatefulSet to have their addresses published for
+  # the sake of the other Postgresql pods even before they're ready, since they
+  # have to be able to talk to each other in order to become ready.
+  publishNotReadyAddresses: true
+  ports:
+    - name: db
+      port: 5432
+      targetPort: db
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -22,12 +61,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app.kubernetes.io/name: postgres
+      app.kubernetes.io/component: primary
   template:
     metadata:
       namespace: postgres
       labels:
-        app: postgres
+        app.kubernetes.io/name: postgres
+        app.kubernetes.io/component: primary
     spec:
       containers:
         - name: postgres
