--- a/infra/postgres/deployment.yaml
+++ b/infra/postgres/deployment.yaml
@@ -97,7 +97,7 @@ spec:
                 - "/bin/sh"
                 - "-c"
                 - "pg_isready -h localhost -p 5432 -U postgres"
-          redinessProbe:
+          readinessProbe:
             exec:
               command:
                 - "/bin/sh"
