--- a/infra/renovate/cron.yaml
+++ b/infra/renovate/cron.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config.json: |-
     {
-      "extends": ["config:recommended"]
+      "extends": ["config:recommended"],
       "dryRun" : "true"
     }
 ---
