feat(renovate): enable renovate

--- a/infra/renovate/cron.yaml
+++ b/infra/renovate/cron.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config.json: |-
     {
-      "dryRun" : "true"
+      "globalExtends": ["config:recommended"]
     }
 ---
 apiVersion: batch/v1
