feat(renovate): enable renovate

--- a/infra/renovate/cron.yaml
+++ b/infra/renovate/cron.yaml
@@ -6,6 +6,7 @@ metadata:
 data:
   config.json: |-
     {
+      "onboardingConfig": "{\"$schema\":\"https://docs.renovatebot.com/renovate-schema.json\",\"onboardingConfig\":{\"extends\":[\"config:recommended\"]}}"
     }
 ---
 apiVersion: batch/v1
