--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:best-practices"],
+  "extends": ["config:recommended"],
   "dependencyDashboard": true,
   "argocd": {
     "fileMatch": ["infra/argocd/applications\\.yaml$"]
