--- a/infra/observability/ingress.yaml
+++ b/infra/observability/ingress.yaml
@@ -12,13 +12,13 @@ spec:
     - match: "Host(`prometheus.k.joshuachp.dev`)"
       kind: Rule
       services:
-        - name: prometheus-server
+        - name: prometheus-operated
           port: http-web
     - match: "Host(`alertmanager.k.joshuachp.dev`)"
       kind: Rule
       services:
-        - name: prometheus-alertmanager
-          port: http
+        - name: alertmanager-operated
+          port: http-web
   tls:
     secretName: cert-k-joshuachp-dev
     domains:
@@ -40,7 +40,7 @@ spec:
     - match: "Host(`grafana.k.joshuachp.dev`)"
       kind: Rule
       services:
-        - name: grafana
+        - name: observability-grafana
           port: http-web
   tls:
     secretName: cert-k-joshuachp-dev
