--- a/infra/cert-manager/values.yaml
+++ b/infra/cert-manager/values.yaml
@@ -1,4 +1,6 @@
 installCRDs: true
+crds:
+    enabled: true
 namespace: cert-manager
 dns01RecursiveNameservers: "1.1.1.1:53,1.0.0.1:53"
 dns01RecursiveNameserversOnly: true
