feat(traefik): enable http3

--- a/infra/traefik/values.yaml
+++ b/infra/traefik/values.yaml
@@ -10,6 +10,8 @@ ports:
     redirectTo:
       port: websecure
   websecure:
+    http3:
+      enabled: true
     tls:
       enabled: true
   ssh:
