fix(traefik): create new entrypoint for quic

--- a/infra/argocd/ingress.yaml
+++ b/infra/argocd/ingress.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   entryPoints:
     - websecure
+    - webquic
   routes:
     - kind: Rule
       match: Host(`argocd.k.joshuachp.dev`)
