--- a/infra/forgejo/ingress.yaml
+++ b/infra/forgejo/ingress.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   entryPoints:
     - websecure
+    - webquic
   routes:
     - kind: Rule
       match: "Host(`git.k.joshuachp.dev`)"
