--- a/infra/syncthing/ingress.yaml
+++ b/infra/syncthing/ingress.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   entryPoints:
     - websecure
+    - webquic
   routes:
     - match: "Host(`syncthing.k.joshuachp.dev`)"
       kind: Rule
