--- a/infra/traefik/values.yaml
+++ b/infra/traefik/values.yaml
@@ -14,7 +14,8 @@ ports:
       enabled: true
   webquic:
     port: 8443
-    expose: true
+    expose:
+      default: true
     exposedPort: 443
     protocol: UDP
     http3:
