--- a/infra/homepage/config.yaml
+++ b/infra/homepage/config.yaml
@@ -26,6 +26,10 @@ data:
             href: http://git.k.joshuachp.dev/
             icon: forgejo.png
             description: Gitea instance
+            widget:
+              type: gitea
+              url: https://git.k.joshuachp.dev
+              key: {{HOMEPAGE_VAR_FORGEJO_TOKEN}}
         - Syncthing:
             href: http://syncthing.k.joshuachp.dev/
             icon: syncthing.png
@@ -42,6 +46,9 @@ data:
             href: http://traefik.k.joshuachp.dev/
             icon: traefik.png
             description: Traefik dashboard
+            widget:
+              type: traefik
+              url: https://traefik.k.joshuachp.dev
         - Prometheus:
             href: http://prometheus.k.joshuachp.dev/
             icon: prometheus.png
@@ -50,10 +57,6 @@ data:
             href: http://grafana.k.joshuachp.dev/
             icon: grafana.png
             description: Grafana
-        - Kubernetes Dashboard:
-            href: http://kubernetes-dashboard.k.joshuachp.dev/
-            icon: kubernetes-dashboard.png
-            description: Kubernetes Dashboard
   widgets.yaml: |
     - kubernetes:
         cluster:
