--- a/infra/homepage/role.yaml
+++ b/infra/homepage/role.yaml
@@ -25,6 +25,7 @@ rules:
       - list
   - apiGroups:
       - traefik.containo.us
+      - traefik.io
     resources:
       - ingressroutes
     verbs:
@@ -35,6 +36,13 @@ rules:
     resources:
       - nodes
       - pods
+    verbs:
+      - get
+      - list
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions/status
     verbs:
       - get
       - list
