--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -8,7 +8,7 @@ postgresql-ha:
 persistence:
   enabled: true
   create: false
-  claimName: forgejo-pvc
+  claimName: forgejo-pvc-local
 
 signing:
   enabled: true
@@ -62,6 +62,9 @@ extraVolumes:
   - name: local-volume
     emptyDir:
       sizeLimit: 500Mi
+  - name: forgejo-pvc
+    persistentVolumeClaim:
+      claimName: forgejo-pvc
 
 extraVolumeMounts:
   - name: local-volume
@@ -73,6 +76,8 @@ extraVolumeMounts:
   - name: local-volume
     mountPath: /data/indexers
     subPath: indexers
+  - name: forgejo-pvc
+    mountPath: /other
 
 extraContainerVolumeMounts:
   - name: local-volume
@@ -84,6 +89,8 @@ extraContainerVolumeMounts:
   - name: local-volume
     mountPath: /data/indexers
     subPath: indexers
+  - name: forgejo-pvc
+    mountPath: /other
 
 extraInitVolumeMounts:
   - name: local-volume
@@ -95,3 +102,5 @@ extraInitVolumeMounts:
   - name: local-volume
     mountPath: /data/indexers
     subPath: indexers
+  - name: forgejo-pvc
+    mountPath: /other
