--- a/infra/woodpecker/namespace.yaml
+++ b/infra/woodpecker/namespace.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: woodpecker
+  annotations:
+    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"key": "location", "operator": "Equal", "value": "external", "effect": "NoSchedule"}]'
