--- a/.woodpecker/ci.yaml
+++ b/.woodpecker/ci.yaml
@@ -5,10 +5,16 @@ when:
     - pull_request
 steps:
   - name: flake check
-    image: joshuachp/nixos:0.1.1
+    image: joshuachp/nixos:0.1.2
     environment:
       NIX_CONFIG:
         from_secret: NIX_CONFIG
+    secrets: [BUILDERS, BUILDER_KEY, BUILDER_HOST_KEYS]
     commands:
-      - git config --global --replace-all safe.directory /woodpecker/src/git.k.joshuachp.dev/joshuachp/nixos-config
+      - mkdir -p ~/.ssh
+      - echo "$BUILDER_KEY" >> ~/.ssh/id_ed25519
+      - echo "$BUILDER_HOST_KEYS" >> ~/.ssh/known_hosts
+      - chmod -R 600 ~/.ssh
+      - nix store ping --store "$BUILDERS"
+      - echo "$BUILDERS" >> /etc/nix/machines
       - nix flake check
