--- a/.woodpecker/ci.yaml
+++ b/.woodpecker/ci.yaml
@@ -3,6 +3,7 @@ when:
   event:
     - push
     - pull_request
+    - manual
 steps:
   - name: flake check
     image: joshuachp/nixos:0.1.3
@@ -13,3 +14,28 @@ steps:
     commands:
       - /setup-remote.sh
       - nix flake check
+  # Run renovate on push to main
+  - name: renovate
+    when:
+      - event: push
+      - event: manual
+    image: renovate/renovate:37.423.0
+    secrets:
+      [
+        GITHUB_COM_TOKEN,
+        RENOVATE_ENDPOINT,
+        RENOVATE_GIT_AUTHOR,
+        RENOVATE_USERNAME,
+        RENOVATE_TOKEN,
+        RENOVATE_GIT_PRIVATE_KEY,
+      ]
+    environment:
+      RENOVATE_CONFIG_FILE: "/opt/renovate/config.json"
+      RENOVATE_PLATFORM: gitea
+    commands:
+      - |
+        echo '{
+          "repositories": ["joshuachp/nixos-config"],
+          "extends":["config:recommended"]
+        }' > /opt/renovate/config.json
+      - renovate
