--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -3,6 +3,7 @@ agent:
   env:
     WOODPECKER_BACKEND_K8S_STORAGE_CLASS: "local-path"
     WOODPECKER_BACKEND_K8S_STORAGE_RWX: false
+    WOODPECKER_MAX_WORKFLOWS: "4"
   extraSecretNamesForEnvFrom:
     - woodpecker-env
   persistentVolume:
