refactor(observability): move all to one namespace

--- a/infra/observability/values.yaml
+++ b/infra/observability/values.yaml
@@ -1,4 +1,4 @@
-namespaceOverride: "prometheus"
+namespaceOverride: "observability"
 
 prometheusOperator:
   tolerations:
@@ -24,7 +24,6 @@ prometheus:
               storage: 10Gi
 
 grafana:
-  namespaceOverride: "grafana"
   admin:
     existingSecret: "grafana"
     userKey: "admin-user"
