--- a/infra/argocd/applications.yaml
+++ b/infra/argocd/applications.yaml
@@ -169,7 +169,7 @@ spec:
           - $repo/infra/observability/values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: prometheus
+    namespace: observability
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
