--- a/infra/observability/namespace.yaml
+++ b/infra/observability/namespace.yaml
@@ -1,9 +1,4 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: prometheus
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: grafana
+  name: observability
