feat(alertmanager): add configuration selector

--- a/infra/observability/values.yaml
+++ b/infra/observability/values.yaml
@@ -28,3 +28,9 @@ grafana:
     existingSecret: "grafana"
     userKey: "admin-user"
     passwordKey: "admin-password"
+
+alertmanager:
+  alertManagerSpec:
+    alertmanagerConfigSelector:
+      matchLabels:
+        role: observability
