fix(alertmanager): use correct config name

--- a/infra/observability/values.yaml
+++ b/infra/observability/values.yaml
@@ -41,6 +41,5 @@ alertmanager:
       value: "external"
       effect: "NoSchedule"
   alertmanagerSpec:
-    alertmanagerConfigSelector:
-      matchLabels:
-        role: observability
+    alertmanagerConfiguration:
+      name: alertmanager-config
