fix(alertmanager): use correct config name

--- a/infra/observability/values.yaml
+++ b/infra/observability/values.yaml
@@ -41,5 +41,6 @@ alertmanager:
       value: "external"
       effect: "NoSchedule"
   alertmanagerSpec:
-    alertmanagerConfiguration:
-      name: alertmanager-config
+    alertmanagerConfigSelector:
+      matchLabels:
+        alertmanagerConfig: observability
