fix(server): move to local-path

--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -25,4 +25,4 @@ server:
     - woodpecker-env
     - woodpecker-server-env
   persistentVolume:
-    storageClass: smb
+    storageClass: local-path
