fix(minio): set the correct label

--- a/infra/minio/deployment.yaml
+++ b/infra/minio/deployment.yaml
@@ -11,7 +11,7 @@ spec:
     metadata:
       namespace: minio
       labels:
-        app.kubernetes.io/name: ntfy
+        app.kubernetes.io/name: minio
     spec:
       tolerations:
         - key: "location"
