--- a/infra/minio/deployment.yaml
+++ b/infra/minio/deployment.yaml
@@ -34,6 +34,10 @@ spec:
               name: web
             - containerPort: 9001
               name: console
+          envFrom:
+            - secretRef:
+                name: minio-env
+                optional: false
       volumes:
         - name: data
           persistentVolumeClaim:
