--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -21,9 +21,9 @@ server:
     WOODPECKER_HOST: https://ci.k.joshuachp.dev
     WOODPECKER_WEBHOOK_HOST: http://woodpecker-server.woodpecker.svc.cluster.local
     WOODPECKER_AUTHENTICATE_PUBLIC_REPOS: true
-    WOODPECKER_LIMIT_MEM: 2147483648 # 2GB
-    WOODPECKER_LIMIT_MEM_SWAP: 2147483648 # 2GB
-    WOODPECKER_LIMIT_CPU_SET: 1,2
+    WOODPECKER_LIMIT_MEM: "2147483648" # 2GB
+    WOODPECKER_LIMIT_MEM_SWAP: "2147483648" # 2GB
+    WOODPECKER_LIMIT_CPU_SET: "1,2"
   extraSecretNamesForEnvFrom:
     - woodpecker-env
     - woodpecker-server-env
